envoy_example/config-2.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: edge
                http_filters:

                  - name: composite
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.common.matching.v3.ExtensionWithMatcher
                      extension_config:
                        name: composite
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.composite.v3.Composite


                      matcher:
                        matcher_list:
                          matchers:
                            - predicate:
                                single_predicate:
                                  input:
                                    name: request-headers
                                    typed_config:
                                      "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                      header_name: ":path"
                                  value_match:
                                    safe_regex:
                                      google_re2: {}
                                      regex: "/wasm(/.*)"
                              on_match:
                                action:
                                  name: composite-action
                                  typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.composite.v3.ExecuteFilterAction
                                    typed_config:
                                      name: envoy.filters.http.wasm
                                      typed_config:
                                        "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                                        config: {
                                          "configuration": {
                                            "@type": "type.googleapis.com/google.protobuf.StringValue",
                                            "value": "{}"
                                          },
                                          "name": "content_type",
                                          "root_id": "main",
                                          "vm_config": {
                                            "code": {
                                              "local": {
                                                "filename": "/etc/envoy/target/wasm32-unknown-unknown/release/content_type.wasm"
                                              }
                                            },
                                            "runtime": "envoy.wasm.runtime.v8"
                                          }
                                        }

                  - name: envoy.filters.http.router
                route_config:
                  virtual_hosts:
                    - name: all_domains
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/wasm"
                          route:
                            cluster: backend

  clusters:
    - name: backend
      type: LOGICAL_DNS
      connect_timeout: 5s
      load_assignment:
        cluster_name: backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend
                      port_value: 1080
